cambiamos el por triveo

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TechAsesor - Tu Asesor Tecnológico Personal</title>
+    <title>Triveo - Tu Asesor Tecnológico Personal</title>
     <meta name="description" content="Encuentra el producto perfecto sin esfuerzo. Chatea con nuestra IA experta y recibe recomendaciones 100% personalizadas.">
     <script src="https://cdn.tailwindcss.com?plugins=typography"></script>
     <script src="https://unpkg.com/lucide@0.472.0"></script>
 <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🤖</text></svg>">
 
 <meta name="description" content="Asesor tecnológico personal: recomendaciones de productos por IA.">
-<meta property="og:title" content="TechAsesor - Tu Asesor Tecnológico Personal">
+<meta property="og:title" content="Triveo - Tu Asesor Tecnológico Personal">
 <meta property="og:description" content="Encuentra el producto perfecto con ayuda de IA.">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://techassesor.vercel.app/">
@@ -47,7 +47,9 @@
 
     <header class="bg-white/80 backdrop-blur-md sticky top-0 z-40 border-b border-slate-200">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <a href="index.html" class="text-2xl font-bold text-slate-900">Tech<span class="text-blue-600">Asesor</span></a>
+            <a href="index.html" class="inline-flex items-center" aria-label="Inicio">
+                <img src="/aimages/triveo-logo.png" alt="Triveo" class="h-8 w-auto" />
+            </a>
             <nav class="hidden md:flex items-center space-x-8">
                 <a href="index.html" class="font-semibold text-blue-600">Inicio</a>
                 <a href="blog.html" class="text-slate-600 hover:text-blue-600 transition-colors">Blog</a>
@@ -126,7 +128,7 @@
 
     <footer class="bg-white border-t border-slate-200">
         <div class="container mx-auto px-6 py-8 text-center text-slate-500">
-            &copy; 2025 TechAsesor. Todos los derechos reservados.
+            &copy; 2025 Triveo. Todos los derechos reservados.
         </div>
     </footer>
     
