--- a/index.html
+++ b/index.html
@@ -43,6 +43,17 @@
 .typing-indicator::after { content: ' ...'; @apply text-slate-400; }
 </style>
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-26DG1RSD11"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-26DG1RSD11');
+</script>
+
 <body class="bg-white text-slate-800 font-sans">
 
     <header class="bg-white/80 backdrop-blur-md sticky top-0 z-40 border-b border-slate-200">
