--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
 
     <header class="bg-white/80 backdrop-blur-md sticky top-0 z-40 border-b border-slate-200">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <a href="index.html" class="inline-flex items-center" aria-label="Inicio">
+            <a href="/" class="inline-flex items-center" aria-label="Inicio">
                 <img src="/images/triveo-logo-cropped.png" alt="Triveo" class="h-12 w-auto" />
             </a>
             <nav class="hidden md:flex items-center space-x-8">
-                <a href="index.html" class="font-semibold text-blue-600">Inicio</a>
-                <a href="blog.html" class="text-slate-600 hover:text-blue-600 transition-colors">Blog</a>
+                <a href="/" class="font-semibold text-blue-600">Inicio</a>
+                <a href="/blog.html" class="text-slate-600 hover:text-blue-600 transition-colors">Blog</a>
             </nav>
             <button class="chat-trigger hidden md:inline-block bg-blue-600 text-white font-semibold px-5 py-2.5 rounded-lg hover:bg-blue-700 transition-all shadow-sm hover:shadow-md">
                 Hablar con un experto
@@ -129,7 +129,7 @@
                 </div>
                 <div id="latest-article-placeholder"></div>
                 <div class="mt-12 text-center">
-                     <a href="blog.html" class="font-semibold text-blue-600 hover:text-blue-800 transition-colors inline-flex items-center">
+                     <a href="/blog.html" class="font-semibold text-blue-600 hover:text-blue-800 transition-colors inline-flex items-center">
                         Ver todos los artículos <i data-lucide="arrow-right" class="w-4 h-4 ml-2"></i>
                     </a>
                 </div>
