--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 .typing-indicator { @apply relative; }
 .typing-indicator::after { content: ' ...'; @apply text-slate-400; }
 </style>
+<meta name="google-adsense-account" content="ca-pub-9359613935782989">
 </head>
 
 <!-- Google tag (gtag.js) -->
